# svn2git

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindSvn.cmake
src/: CMakeLists.txt  main.cpp  repository.cpp  repository.h  ruleparser.cpp  ruleparser.h  src.pro  svn.cpp  svn.h
src/commandline/: CMakeLists.txt  CommandLineOption.h  CommandLineParser.cpp  CommandLineParser.h  CommandLineParserPrivate.cpp  CommandLineParserPrivate.h  OptionDefinition.cpp  OptionDefinition.h  OptionProcessor.cpp  OptionProcessor.h  ParsedOption.h
src/git/: CMakeLists.txt  FastImportGitRepository.cpp  FastImportGitRepository.h  FastImportGitRepositoryTransaction.cpp  FastImportGitRepositoryTransaction.h  ForwardingGitRepository.cpp  ForwardingGitRepository.h  ForwardingGitRepositoryTransaction.cpp  ForwardingGitRepositoryTransaction.h  GitProcessCache.cpp  GitProcessCache.h  GitRepository.cpp  GitRepository.h  GitRepositoryTransaction.cpp  GitRepositoryTransaction.h
src/logging/: CMakeLists.txt  LoggingQProcess.cpp  LoggingQProcess.h
src/rules/: CMakeLists.txt  Rule.cpp  Rule.h  RuleList.cpp  RuleList.h  RuleMatch.cpp  RuleMatch.h  RuleMatchAction.h  RuleMatchSubstitution.cpp  RuleMatchSubstitution.h  RuleRepository.cpp  RuleRepository.h  RuleStats.cpp  RuleStats.h  RuleStatsPrivate.cpp  RuleStatsPrivate.h  Rules.cpp  Rules.h
src/svn/: AprAutoPool.cpp  AprAutoPool.h  CMakeLists.txt  Svn.cpp  Svn.h  SvnHelper.cpp  SvnHelper.h  SvnPrivate.cpp  SvnPrivate.h  SvnRevision.cpp  SvnRevision.h
